--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 	<properties>
 		<java.version>17</java.version>
 		<skipOwasp>true</skipOwasp>
+		<sonar.qualitygate.wait>true</sonar.qualitygate.wait>
+		<sonar.host.url>http://10.0.0.80:9000</sonar.host.url>
+		<sonar.login>${env.SONAR_TOKEN}</sonar.login>
 	</properties>
 	<dependencies>
 		<dependency>
