--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,9 @@
 	<properties>
 		<java.version>17</java.version>
 		<skipOwasp>true</skipOwasp>
-		<sonar.qualitygate.wait>true</sonar.qualitygate.wait>
+		<sonar.qualitygate.wait>false</sonar.qualitygate.wait>
 		<sonar.organization>moderneci</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.token>${env.SONAR_TOKEN}</sonar.token>
+		<sonar.projectKey>ca.alithya.pratiques.devsecops:moderneci</sonar.projectKey>
 		<sonar.java.binaries>target</sonar.java.binaries>
 		<sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
@@ -66,7 +65,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.7</version>
+				<version>0.8.11</version>
 				<executions>
 					<execution>
 						<goals>
@@ -91,7 +90,7 @@
 				<version>3.10.0.2594</version>
 				<executions>
 					<execution>
-						<phase>install</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>sonar</goal>
 						</goals>
