--- a/helmChart/templates/deployment.yaml
+++ b/helmChart/templates/deployment.yaml
@@ -43,24 +43,19 @@ spec:
           livenessProbe:
             httpGet:
               path: /actuator/health
-              port: http
+              port: 8080
           readinessProbe:
             httpGet:
               path: /actuator/health
-              port: http
+              port: 8080
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
             - name: tmp-volume
               mountPath: /tmp
-            - name: config-volume
-              mountPath: /app/config
       volumes:
         - name: tmp-volume
           emptyDir: {}
-        - name: config-volume
-          configMap:
-            name: {{ .Release.Name }}-configmap
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
