--- a/helmChart/templates/service.yaml
+++ b/helmChart/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "moderneci.fullname" . }}
+  name: {{ include "..fullname" . }}
   labels:
-    {{- include "moderneci.labels" . | nindent 4 }}
+    {{- include "..labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: 8080
+      targetPort: http
       protocol: TCP
       name: http
   selector:
-    {{- include "moderneci.selectorLabels" . | nindent 4 }}
+    {{- include "..selectorLabels" . | nindent 4 }}
