--- a/helmChart/values.yaml
+++ b/helmChart/values.yaml
@@ -1,4 +1,4 @@
-# Default values for moderneci.
+# Default values for ..
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: mombe090/myapp
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "main_2024_01_26_20_16_50"
 
@@ -28,17 +28,20 @@ serviceAccount:
 podAnnotations: {}
 podLabels: {}
 
-podSecurityContext:
-   fsGroup: 2000
+podSecurityContext: {}
+  # fsGroup: 2000
 
-securityContext:
-   readOnlyRootFilesystem: true
-   runAsNonRoot: true
-   runAsUser: 1000
+securityContext: {}
+  # capabilities:
+  #   drop:
+  #   - ALL
+  # readOnlyRootFilesystem: true
+  # runAsNonRoot: true
+  # runAsUser: 1000
 
 service:
   type: ClusterIP
-  port: 8080
+  port: 80
 
 ingress:
   enabled: false
@@ -56,24 +59,27 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources:
-   limits:
-     cpu: 250m
-     memory: 1024Mi
-   requests:
-     cpu: 100m
-     memory: 512Mi
+resources: {}
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+  # limits:
+  #   cpu: 100m
+  #   memory: 128Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 128Mi
 
 autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
-  targetMemoryUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
 
 # Additional volumes on the output Deployment definition.
-volumes:
-
+volumes: []
 # - name: foo
 #   secret:
 #     secretName: mysecret
