--- a/helmChart/moderneci/Chart.yaml
+++ b/helmChart/moderneci/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: .
+name: moderneci
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
