--- a/helmChart/moderneci/templates/hpa.yaml
+++ b/helmChart/moderneci/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "..fullname" . }}
+  name: {{ include "moderneci.fullname" . }}
   labels:
-    {{- include "..labels" . | nindent 4 }}
+    {{- include "moderneci.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "..fullname" . }}
+    name: {{ include "moderneci.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
