--- a/helmChart/moderneci/templates/deployment.yaml
+++ b/helmChart/moderneci/templates/deployment.yaml
@@ -43,11 +43,11 @@ spec:
           livenessProbe:
             httpGet:
               path: /actuator/health
-              port: http
+              port: 8080
           readinessProbe:
             httpGet:
               path: /actuator/health
-              port: http
+              port: 8080
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
